--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,10 +5,9 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>동물원</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <style>
     .container{
         max-width : 100%;
@@ -32,7 +31,7 @@
 <!-- Image and text -->
 <nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" th:href="@{/}">
-        <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+        <img src="/images/lion.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
         Dongmulown
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,27 +44,27 @@
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
-            <li class="nav-item" >
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/sign-up}">계정만들기</a>
             </li>
-            <li class="nav-item" >
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/login}">로그인</a>
             </li>
-            <li class="nav-item" >
+            <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" th:href="@{/notification}">
                     <i class="fa fa-bell-o"></i>
                 </a>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                 <a class="nav-link dropdown-toggle" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <svg data-jdenticon-value="user127" width="24" height="24" class="rounded border bg-light"></svg>
                 </a>
-                <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="userDropdown">
+                <div class="dropdown-menu dropdown-menu-sm-right" aria-labe트lledby="userDropdown">
                     <h6 class="dropdown-header">
                         <span sec:authentication="name">Username</span>
                     </h6>
                     <a class="dropdown-item"  th:href="@{'/profile/'}">프로필</a>
-                    <a class="dropdown-item" >스터디</a>
+                    <a class="dropdown-item" >이벤</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" th:href="@{'/settings/profile'}">설정</a>
                     <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
@@ -80,8 +79,8 @@
 
 <footer th:fragment="footer">
     <div class="row justify-content-center">
-        <img class="mb-2" src="/images/study_moim_icon.png" width="60">
-        <small class="d-black mb-3 text-muted">2020.</small>
+        <img class="mb-2" src="/images/lion.png" width="60">
+        <small class="d-black mb-3 text-muted">ZOO.2020</small>
     </div>
 </footer>
 
