--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,60 +1,62 @@
 <!doctype html>
 <html lang="en"
-    xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-    <title></title>
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
-</head>
+      xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments.html :: head"></head>
+<style>
+    #loginInput {
+  width: 100%;
+  max-width: 600px;
+  padding: 15px;
+  margin: auto;
+}
+#loginInput .checkbox {
+  font-weight: 400;
+}
+#loginInput .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+</style>
 <body class="bg-light">
 <div th:replace="fragments.html :: navbar"></div>
-<div class="pt-4 justify-content-center" style="margin : auto; width:300px">
+<div class="pt-4 justify-content-center" id="loginInput">
     <div class="text-center">
         <img class="mb-4" src="images/lion.png" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">로그인</h1>
-        <label for="email" class="sr-only">Email address</label>
+        <label for="username" class="sr-only">Email address</label>
     </div>
-
-    <form class="form-signin" th:action="@{/login}" method="post">
-        <label for="email">이메일</label>
-        <input type="email" id="email" class="form-control" required autofocus>
-        <label for="password" class="sr-only">Password</label>
-        <label for="password">비밀번호</label>
-        <input type="password" id="password" class="form-control" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">로그인</button>
-    </form>
+    <div th:if="${param.error}" class="alert alert-danger" role="alert">
+        <p>이메일(닉네임)과 패스워드가 정확하지 않습니다.</p>
+        <p><a th:href="@{/find-username}">계정 찾기</a></p>
+        <p><a th:href="@{/find-password}">비밀번호 찾기</a></p>
+    </div>
+    <div class="row justify-content-center">
+        <form class="needs-validation col-sm-6" th:action="@{/login}" method="post" novalidate>
+            <div class="form-group">
+                <label for="username">이메일</label>
+                <input type="text" id="username" name="username" class="form-control" required autofocus>
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" id="password" name="password" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">로그인</button>
+            </div>
+        </form>
+    </div>
     <p class="mt-5 mb-3 text-muted text-center">&copy; By ZOO .2020</p>
 </div>
+<script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
