--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments.html :: head">
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,11 +9,13 @@
     .container{
     max-width : 100%;
     }
-
     </style>
 </head>
 <body class="bg-light">
 <nav th:replace="fragments.html :: navbar"></nav>
+<div class="alert alert-warning" role="alert" th:if="${account != null && !account.emailVerified}">
+    <a class="alert-link" th:href="@{/recheck-email}">이메일 인증</a>을 해야 서비스를 이용하실 수 있습니다.
+</div>
 <div class="jumbotron">
     <h1 class="display-4">Hello, ZOO!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
