--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 </style>
 <body class="bg-light">
 <div th:replace="fragments.html :: navbar"></div>
-<div class="pt-4 justify-content-center" id="loginInput">
+<div class="mx-auto justify-content-center" id="loginInput">
     <div class="text-center">
         <img class="mb-4" src="images/lion.png" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">로그인</h1>
