--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="fragments.html :: head">
     <meta charset="UTF-8">
     <title>Title</title>
@@ -25,19 +25,54 @@
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
 <div class="container">
+    <div class="row pt-5 justify-content-center">
+        <div class="col-md-2 order-md-2 mb-4" sec:authorize="isAuthenticated()">
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text-muted">내 프로필</span>
+                <span class="badge badge-secondary badge-pill">3</span>
+            </h4>
+            <ul class="list-group mb-3">
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <h6 class="my-0" th:text="${name}">name</h6>
+                        <small class="text-muted" th:text="${email}">이메일@email.com</small>
+                    </div>
+                </li>
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                    <div>
+                        <small class="text-muted">좋아하는 동물</small>
+                    </div>
+                    <span class="text-muted" th:text="${favoriteAnimal}">사슴</span>
+                </li>
+                <!--<li class="list-group-item d-flex justify-content-between bg-light">
+                    <div class="text-success">
+                        <h6 class="my-0">Promo code</h6>
+                        <small>EXAMPLECODE</small>
+                    </div>
+                    <span class="text-success">-$5</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                    <span>Total (USD)</span>
+                    <strong>$20</strong>
+                </li>-->
+            </ul>
 
-    <div class="row pt-4 justify-content-center">
-        <div class="col-8 card-deck">
-            <h3>진행 중인 이벤트 <span><button type="button" class="btn btn-outline-primary">더보기</button></span></h3>
+            <form class="card p-2">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Promo code">
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-secondary">Redeem</button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </div>
-    <div class="row pt-4 justify-content-center">
-        <div class="col-8 card-deck">
+        <div class="col-5 card-deck">
             <div class="card">
                 <img src="/images/WowEvent.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                        to
                         additional
                         content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -52,7 +87,7 @@
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
-            <div class="card">
+            <!--<div class="card">
                 <img src="/images/botEvent.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -61,10 +96,10 @@
                         content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
-</div>
-<footer th:replace="fragments.html :: footer"></footer>
+
+    <footer th:replace="fragments.html :: footer"></footer>
 </body>
 </html>
