--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,9 +10,7 @@
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-    .container{
-        max-width : 100%;
-    }
+
 
     h1,
     h2,
@@ -33,7 +31,7 @@
 <nav th:fragment="navbar" class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a class="navbar-brand" th:href="@{/}">
         <img src="/images/lion.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-        Dongmulown
+        zoo
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,6 +40,9 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/event}">이벤트</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/manage/zooAnimal}">동물 현황</a>
             </li>
         </ul>
         <ul class="navbar-nav justify-content-end">
